--- a/src/style.css
+++ b/src/style.css
@@ -16,3 +16,11 @@
   padding: 2px 23px 2px 30px;
   outline: 0;
 }
+
+.cuisine {
+  display:inline-block;
+  margin:10px;
+  padding: 8px;
+  background-color:aqua;
+  border-radius:15px;
+}
